# llmstack

./: CONTEXT.md  README.md  modal_pretraining.py  pyproject.toml  test_modal.py
midtraining/: __init__.py
modal_utils/: __init__.py
models/: __init__.py
posttraining/: __init__.py
pretraining/: README.md  __init__.py  config.py  data_processing.py  data_sampling.py  data_selection.py  model.py  pipeline.py  requirements.txt  toy_dataset_generator.py  training.py
references/: data_data_everywhere_pretraining_dataset_construction.txt  pretrainers_guide_to_training_data.txt
