[project]
name = "llmstack"
version = "0.1.0"
description = "Full LLM training stack from pretraining to posttraining using agentic tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    
    # Data processing
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Modal and cloud
    "modal>=0.64.0",
    "hf-transfer>=0.1.0",
    
    # Progress and logging
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    
    # Utilities
    "requests>=2.31.0",
    "tomli>=2.0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pretraining*", "midtraining*", "posttraining*", "models*", "modal_utils*"]
exclude = ["references*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true